created array of topics. looped through array and created a button for each topic. added text input/submit button. added event listener to submit button. value of text input is added to topics array. getTopics is called

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <input id="search" type="text" placeholder="Search for a Giphy">
+    <button id="addTopicBtn">Add Topic</button>
+    <div id="buttonGroup"></div>
 </body>
 
 </html>
