everything works the way i want it. i dont understand how im getting everything to work but dont really understand what im doing

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <input id="search" type="text" placeholder="Search for a Giphy">
     <button id="addTopicBtn">Add Topic</button>
     <div id="buttonGroup"></div>
+    <div id="giphyGroup"></div>
 </body>
 
 </html>
