--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
     <input id="search" type="text" placeholder="Search for a Giphy">
     <button id="addTopicBtn">Add Topic</button>
+    <label for="limit">Limit:</label>
+    <input type="number" name="limit" id="limit" min="1" max="50">
     <div id="buttonGroup"></div>
     <div id="giphyGroup"></div>
 </body>
